updated build config

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,18 +43,27 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.appd"
+        applicationId "com.tronisys.appd"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        release {
+            storeFile file('appd-key.keystore')
+            storePassword 'appdkey'
+            keyAlias 'appd-key'
+            keyPassword 'appdkey'
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
